--- a/style.css
+++ b/style.css
@@ -12,11 +12,43 @@
     justify-content: space-between;
 }
 
+/* Left */
+
 .left {
     width: 34%;
     /* height: 200px; */
     /* border: 2px solid black; */
 }
+
+.p-info1{
+    font-size: 17px;
+    margin-left: 60px;
+    margin-top: 10px;
+    color: rgb(78, 78, 78);
+}
+
+.p-info2{
+    font-size: 17px;
+    margin-left: 60px;
+    margin-top: 15px;
+    color: rgb(78, 78, 78);
+}
+
+.p-info3{
+    font-size: 17px;
+    margin-left: 60px;
+    margin-top: 15px;
+    color: rgb(78, 78, 78);
+}
+
+.p-info4{
+    font-size: 17px;
+    margin-left: 60px;
+    margin-top: 15px;
+    color: rgb(78, 78, 78);
+}
+
+/* Right */
 
 .right{
     width: 64%;
@@ -27,22 +59,51 @@
 
 }
 
-.education{
-    width: 100%;
-    height: 500px;
-    background-color: red;
-}
-
 .experience{
     width: 100%;
     height: 500px;
     background-color: cyan;
 }
 
+.experience h1{
+    margin-top: 30px;
+    margin-left: 20px;
+}
+
+.experience .p1{
+    margin-left: 20px;
+}
+
+.experience .span1{
+    margin-left: 50px;
+    font-size: 20px;
+    color: rgb(0, 128, 128);
+}
+
+.experience button{
+    color: white;
+    background-color: rgb(0, 128, 128);
+    margin-left: 10px;
+    font-size: 12px;
+    padding: 3px 8px 3px 8px;
+    border: 1px solid rgb(0, 128, 128);
+    border-radius: 5px;
+}
+
+.education{
+    width: 100%;
+    height: 500px;
+    background-color: red;
+}
+
+
+/* Photo */
+
 .photo{
     width: 100%;
     height: 300px;
-    background-color: red;
+    background-image: url(https://www.w3schools.com/w3images/avatar_hat.jpg);
+    background-size: cover;
 }
 
 .info{
@@ -64,3 +125,4 @@
         width: 100%;
     }
 }
+
